2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.WelcomePage.WelcomePageFallbackWidget.cs,
	  gtk-gui/gui.stetic: Cosmetic fix.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.addin.xml: Bump add-in versions.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePageFallbackWidget.cs, WelcomePage.mdp, gtk-gui/objects.xml,
	  gtk-gui/MonoDevelop.WelcomePage.WelcomePageFallbackWidget.cs,
	  gtk-gui/gui.stetic: Make fonts bigger. Show url descriptions in the
	  button instead of a tooltip. Moved project table headers into the table,
	  to make sure they are properly aligned.

2007-12-06  Geoff Norton  <gnorton@novell.com>

	* WelcomePageView.cs: Use the PlatformService to get Mime information instead
	  of Gnome.Vfs directly

2007-12-05  Michael Hutchinson <mhutchinson@novell.com> 

	* WelcomePageFallbackWidget.cs: Correct background rendering order.
	* WelcomePageView.cs: Disable the HTML welcome page code path; the GTK#
	  version currently does everything and uses fewer resources. We can
	  re-enable it when the HTML version is worth using.
	* WelcomePageOptionPanel.cs: Enable option panel even when there is no
	  browser.

2007-12-05  Michael Hutchinson <mhutchinson@novell.com> 

	* mono-decoration.png, WelcomePageFallbackWidget.cs, mono-bg.png,
	  WelcomePageView.cs, WelcomePage.xsl, WelcomePageBrowser.cs,
	  WelcomePage.mdp, gtk-gui/generated.cs, gtk-gui/objects.xml,
	  gtk-gui/MonoDevelop.WelcomePage.WelcomePageFallbackWidget.cs,
	  gtk-gui/gui.stetic, Makefile.am, WelcomePageCommands.cs: New browserless
	  Welcome Page that activates when no IWebBrowser addin is available.
	  Changed theming mechanism slightly so browser and GTK# welcome pages
	  share as much as possible, including XML link definition file. Saves
	  almost 10MB of memory (though a lot of that was shared with Firefox
	  open).

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.mdp: Directory reorganization.
